--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
           <figure>
             <a class="picture" href="../images/autumn.jpg" target="_blank">
               <img
-                src="../images/autumn.jpg"
+                src="./images/autumn.jpg"
                 alt="Autumn"
                 width="500"
                 title="Autumn">
@@ -49,7 +49,7 @@
           <figure>
             <a class="picture" href="" target="_blank">
               <img
-                src="../images/forest.jpg"
+                src="./images/forest.jpg"
                 alt="Forest"
                 width="500"
                 title="Forest">
@@ -60,9 +60,9 @@
 
         <div>
           <figure>
-            <a class="picture" href="../images/moun.jpg" target="_blank">
+            <a class="picture" href="./images/moun.jpg" target="_blank">
               <img
-                src="../images/moun.jpg"
+                src="./images/moun.jpg"
                 alt="Mountains"
                 width="500"
                 title="Mountains">
@@ -73,9 +73,9 @@
 
         <div>
           <figure>
-            <a class="picture" href="../images/picture.jpg" target="_blank">
+            <a class="picture" href="./images/picture.jpg" target="_blank">
               <img
-                src="../images/picture.jpg"
+                src="./images/picture.jpg"
                 alt="Nature"
                 width="500"
                 title="Nature">
@@ -86,9 +86,9 @@
 
         <div>
           <figure>
-            <a class="picture" href="../images/river.jpg" target="_blank">
+            <a class="picture" href="./images/river.jpg" target="_blank">
               <img
-                src="../images/river.jpg"
+                src="./images/river.jpg"
                 alt="River"
                 width="500"
                 title="River">
@@ -99,9 +99,9 @@
 
         <div>
           <figure>
-            <a class="picture" href="../images/tree.jpg" target="_blank">
+            <a class="picture" href="./images/tree.jpg" target="_blank">
               <img
-                src="../images/tree.jpg"
+                src="./images/tree.jpg"
                 alt="Tree"
                 width="500"
                 title="Tree">
