--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,7 @@
       <div class="pictures">
         <div>
           <figure>
-            <a class="picture" href="images/autumn.jpg" target="_blank">
+            <a class="picture" href="" target="_blank">
               <img
                 src="images/autumn.jpg"
                 alt="Autumn"
@@ -60,7 +60,7 @@
 
         <div>
           <figure>
-            <a class="picture" href="images/moun.jpg" target="_blank">
+            <a class="picture" href="" target="_blank">
               <img
                 src="images/moun.jpg"
                 alt="Mountains"
@@ -73,7 +73,7 @@
 
         <div>
           <figure>
-            <a class="picture" href="images/picture.jpg" target="_blank">
+            <a class="picture" href="" target="_blank">
               <img
                 src="images/picture.jpg"
                 alt="Nature"
@@ -86,7 +86,7 @@
 
         <div>
           <figure>
-            <a class="picture" href="images/river.jpg" target="_blank">
+            <a class="picture" href="" target="_blank">
               <img
                 src="images/river.jpg"
                 alt="River"
@@ -99,7 +99,7 @@
 
         <div>
           <figure>
-            <a class="picture" href="images/tree.jpg" target="_blank">
+            <a class="picture" href="" target="_blank">
               <img
                 src="images/tree.jpg"
                 alt="Tree"
