--- a/gallery.html
+++ b/gallery.html
@@ -8,110 +8,104 @@
   </head>
 
   <body>
-      <header class="header">
-        <nav class="navbar">
-          <ol class="navbar-list">
-            <li class="navbar-item">
-              <a class="navbar-link" href="index.html">На карті</a>
-            </li>
-            <li class="navbar-item">
-              <a class="navbar-link" href="catalog.html">Перелік</a>
-            </li>
-            <li class="navbar-item">
-              <a class="navbar-link" href="form.html">Реєстрація</a>
-            </li>
-            <li class="navbar-item">
-              <a class="navbar-link" href="gallery.html">Галерея</a>
-            </li>
-            <li class="navbar-item">
-              <a class="navbar-link" href="articles.html">Статті</a>
-            </li>
-          </ol>
-        </nav>
+    <header class="header">
+      <nav class="navbar">
+        <ol class="navbar-list">
+          <li class="navbar-item">
+            <a class="navbar-link" href="index.html">На карті</a>
+          </li>
+          <li class="navbar-item">
+            <a class="navbar-link" href="catalog.html">Перелік</a>
+          </li>
+          <li class="navbar-item">
+            <a class="navbar-link" href="form.html">Реєстрація</a>
+          </li>
+          <li class="navbar-item">
+            <a class="navbar-link" href="gallery.html">Галерея</a>
+          </li>
+          <li class="navbar-item">
+            <a class="navbar-link" href="articles.html">Статті</a>
+          </li>
+        </ol>
+      </nav>
     </header>
 
     <div class="container">
       <div class="pictures">
         <div>
           <figure>
-            <a class="picture" href="" target="_blank">
-              <img
-                src="images/autumn.jpg"
-                alt="Autumn"
-                width="500"
-                title="Autumn">
-            </a>
+            <img
+              src="images/autumn.jpg"
+              alt="Autumn"
+              width="500"
+              title="Autumn"
+              class="picture">
             <figcaption>Осінь</figcaption>
           </figure>
         </div>
 
         <div>
           <figure>
-            <a class="picture" href="" target="_blank">
-              <img
-                src="images/forest.jpg"
-                alt="Forest"
-                width="500"
-                title="Forest">
-            </a>
+            <img
+              src="images/forest.jpg"
+              alt="Forest"
+              width="500"
+              title="Forest"
+              class="picture">
             <figcaption>Ліс</figcaption>
           </figure>
         </div>
 
         <div>
           <figure>
-            <a class="picture" href="" target="_blank">
-              <img
-                src="images/moun.jpg"
-                alt="Mountains"
-                width="500"
-                title="Mountains">
-            </a>
+            <img
+              src="images/moun.jpg"
+              alt="Mountains"
+              width="500"
+              title="Mountains"
+              class="picture">
             <figcaption>Гори</figcaption>
           </figure>
         </div>
 
         <div>
           <figure>
-            <a class="picture" href="" target="_blank">
-              <img
-                src="images/picture.jpg"
-                alt="Nature"
-                width="500"
-                title="Nature">
-            </a>
+            <img
+              src="images/picture.jpg"
+              alt="Nature"
+              width="500"
+              title="Nature"
+              class="picture">
             <figcaption>Природа</figcaption>
           </figure>
         </div>
 
         <div>
           <figure>
-            <a class="picture" href="" target="_blank">
-              <img
-                src="images/river.jpg"
-                alt="River"
-                width="500"
-                title="River">
-            </a>
+            <img
+              src="images/river.jpg"
+              alt="River"
+              width="500"
+              title="River"
+              class="picture">
             <figcaption>Ріка</figcaption>
           </figure>
         </div>
 
         <div>
           <figure>
-            <a class="picture" href="" target="_blank">
-              <img
-                src="images/tree.jpg"
-                alt="Tree"
-                width="500"
-                title="Tree">
-            </a>
+            <img
+              src="images/tree.jpg"
+              alt="Tree"
+              width="500"
+              title="Tree"
+              class="picture">
             <figcaption>Дерево</figcaption>
           </figure>
         </div>
       </div>
     </div>
 
-      <div class="footer">&copy;Kyiv-2024</div>
+    <div class="footer">&copy;Kyiv-2024</div>
   </body>
 </html>
