--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <header class="header">
-      <nav class="navbar">
+      <nav class="container">
         <ol class="navbar-list">
           <li class="navbar-item">
             <a class="navbar-link" href="index.html">На карті</a>
@@ -44,6 +44,8 @@
       </div>
     </div>
 
-    <div class="footer">&copy;Kyiv-2024</div>
+    <div class="footer">
+      <div class="container">&copy;Kyiv-2024</div>
+    </div>
   </body>
 </html>
